# ivy

./: .dockerignore  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
root/docker/: .env.example  README.md  docker-compose.yml
root/docker/containers/agents/knowledge/: .dockerignore  README.md  main.py  pyproject.toml
root/docker/containers/ingestion/: Dockerfile  README.md  main.py  main_colab.ipynb  pyproject.toml
root/docker/containers/orchestrator/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
