[project]
name = "orchestrator"
version = "0.1.0"
description = "LangGraph Orchestrator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=1.0.5",
    "python-dotenv>=1.2.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.2.0",
]
